--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,25 +19,16 @@
       Role(s): <span sec:authentication="principal.authorities"></span>
     </p>
   <hr>
-<!-- URL Restriction -->
-<hr>
-<div sec:authorize="hasRole('MANAGER')">
-  <!-- Add a link to point to /leaders... this is for managers -->
-  <p>
-    <a th:href="@{/doctors}">Leadership Meeting</a>
-    (Only for manager peeps)
-  </p>
-</div>
-<div sec:authorize="hasRole('ADMIN')">
-  <!-- Add a link to point to /systems... this is for admins -->
-
-  <p>
-    <a th:href="@{/systems}">Systems Meeting</a>
-    (Only for Admin peeps)
-  </p>
-</div>
-<hr>
-
+<!-- Add a link to point to /leaders -->
+<p>
+  <a th:href="@{/leaders}">LeaderShip Meeting</a>
+  (only for manager)
+</p>
+<!-- Add a link to point to /leaders -->
+<p>
+  <a th:href="@{/systems}">systems Meeting</a>
+  (only for systems)
+</p>
 
 <!-- Log out Button -->
 <form action="#" th:action="@{/logout}" method="POST">
