--- a/src/main/resources/templates/roku-login.html
+++ b/src/main/resources/templates/roku-login.html
@@ -70,6 +70,10 @@
                         </div>
                     </div>
                 </div>
+                <!-- Registration Button -->
+                <div th:href="@{register/showRegistrationForm}" class="btn btn-primary mt-3" role="button" aria-pressed="true">Register New User</a>>
+
+                </div>
             </div>
         </div>
     </body>
