--- a/src/main/resources/templates/registration/registration-confirmation.html
+++ b/src/main/resources/templates/registration/registration-confirmation.html
@@ -11,10 +11,10 @@
 
 <!-- display first name, last name and email -->
 <ul>
-  <li th:text="'User name: ' + ${webUser.userName}"></li>
-  <li th:text="'First name: ' + ${webUser.firstName}"></li>
-  <li th:text="'Last name: ' + ${webUser.lastName}"></li>
-  <li th:text="'Email name: ' + ${webUser.email}"></li>
+  <li th:text="'User name: ' + ${rokuUser.userName}"></li>
+  <li th:text="'First name: ' + ${rokuUser.firstName}"></li>
+  <li th:text="'Last name: ' + ${rokuUser.lastName}"></li>
+  <li th:text="'Email name: ' + ${rokuUser.email}"></li>
 </ul>
 
 <hr>
