--- a/src/main/resources/templates/registration/registration-form.html
+++ b/src/main/resources/templates/registration/registration-form.html
@@ -58,7 +58,7 @@
             <div th:if="${#fields.hasErrors('userName')}"
                  style="margin-bottom: 25px" class="text-danger">
               <ul>
-                <li th:each="err : ${#fields.errors('userName')}" th:text="'User name ' + ${err}" />
+                <li th:each="err : ${#fields.errors('userName')}" th:text="'Users name ' + ${err}" />
               </ul>
             </div>
 
