--- a/src/main/resources/templates/roku-login.html
+++ b/src/main/resources/templates/roku-login.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <!-- Registration Button -->
-                <div th:href="@{register/showRegistrationForm}" class="btn btn-primary mt-3" role="button" aria-pressed="true">Register New User</a>>
+                <div th:href="@{register/showRegistrationForm}" class="btn btn-primary mt-3" role="button" aria-pressed="true">Register New User</a>
 
                 </div>
             </div>
