--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -37,6 +37,15 @@
 </div>
 
 
+<!-- Add a Link for the Employees list, making it visible to admins -->
+<div sec:authorize="hasRole('ADMIN')">
+  <p>
+    <a th:href="@{/employees/list}">View Employees</a>
+    Text
+  </p>
+</div>
+
+
 <!-- Log out Button -->
 <form action="#" th:action="@{/logout}" method="POST">
   <input type="submit" value="Logout"/>
