--- a/src/main/resources/templates/list-employees.html
+++ b/src/main/resources/templates/list-employees.html
@@ -22,17 +22,16 @@
   <table class="table table-bordered table-striped">
     <thead class="table-dark">
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
+      <th>User Id</th>
+      <th>User Name</th>
     </tr>
     </thead>
 
     <tbody>
     <tr th:each="tempEmployee : ${employees}">
 
-      <td th:text="${tempEmployee.firstName}" />
-      <td th:text="${tempEmployee.lastName}" />
+      <td th:text="${tempEmployee.id}" />
+      <td th:text="${tempEmployee.userName}" />
 
     </tr>
     </tbody>
