so we added the link and button to add an employee, and we added the employee form.

--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -18,6 +18,13 @@
 
   <h3>Employee Directory</h3>
   <hr>
+  <!-- adding button for adding a new employee -->
+  <a th:href="@{/employees/showFormForAdd}"
+    class="btn btn-primary btn-sm mb-3">
+    Add Employee
+  </a>
+
+
 
   <table class="table table-bordered table-striped">
     <thead class="table-dark">
@@ -38,6 +45,6 @@
   </table>
 
 </div>
-
+<a th:href="@{/}">Back to home page</a>
 </body>
 </html>
