so an employee class was added for when we want the admin to be able to view and add employees. Now, not sure, we'll probably have to make a new service for that. And we'll have to make some adjustments to the controllers. And probably also the html files.

--- a/src/main/resources/templates/employees/employee-form.html
+++ b/src/main/resources/templates/employees/employee-form.html
@@ -16,7 +16,7 @@
         <h3>Employee Directory</h3>
         <hr>
         <p class="h4 mb-4">Save Employee</p>
-        <form action="#" th:action="@{/employees/save}"
+        <form action="#" th:action="@{/users/save}"
                             th:object="${employee}" method="POST">
             <input type="text" th:field="*{userName}"
                     class="form-control mb-4 w-25" placeholder="User Name">
