--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -19,7 +19,7 @@
   <h3>Employee Directory</h3>
   <hr>
   <!-- adding button for adding a new employee -->
-  <a th:href="@{/employees/showFormForAdd}"
+  <a th:href="@{/users/showFormForAdd}"
     class="btn btn-primary btn-sm mb-3">
     Add Employee
   </a>
@@ -35,7 +35,7 @@
     </thead>
 
     <tbody>
-    <tr th:each="tempEmployee : ${employees}">
+    <tr th:each="tempEmployee : ${users}">
 
       <td th:text="${tempEmployee.id}" />
       <td th:text="${tempEmployee.userName}" />
