so currently we have the code reading from an employee database. We can view the employees, and an update button and the code for handling the button has been made, but the update button doesn't work yet.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,7 +40,7 @@
 <!-- Add a Link for the Employees list, making it visible to admins -->
 <div sec:authorize="hasRole('ADMIN')">
   <p>
-    <a th:href="@{/users/list}">View Employees</a>
+    <a th:href="@{/employees/list}">View Employees</a>
     Text
   </p>
 </div>
