--- a/src/main/resources/templates/employees/employee-form.html
+++ b/src/main/resources/templates/employees/employee-form.html
@@ -16,14 +16,30 @@
         <h3>Employee Directory</h3>
         <hr>
         <p class="h4 mb-4">Save Employee</p>
-        <form action="#" th:action="@{/users/save}"
-                            th:object="${employee}" method="POST">
-            <input type="text" th:field="*{userName}"
-                    class="form-control mb-4 w-25" placeholder="User Name">
+
+        <form action="#" th:action="@{/employees/save}"
+                         th:object="${employee}" method="POST">
+            <!--Adding hidden from field to handle updates-->
+            <input type="hidden" th:field="*{id}">
+
+
+
+
+            <input type="text" th:field="*{firstName}"
+                    class="form-control mb-4 w-25" placeholder="First Name">
+
+            <input type="text" th:field="*{lastName}"
+                   class="form-control mb-4 w-25" placeholder="Last Name">
+
+            <input type="text" th:field="*{email}"
+                   class="form-control mb-4 w-25" placeholder="Email">
+
             <button type="submit" class="btn btn-info col-2">Save</button>
         </form>
+
+        <!-- link back to the employee list -->
         <hr>
-        <a th:href="@{employee/list}">Back to Employee List</a>
+        <a th:href="@{employees/list}">Back to Employee List</a>
     </div>
 
 </body>
