--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -19,26 +19,38 @@
   <h3>Employee Directory</h3>
   <hr>
   <!-- adding button for adding a new employee -->
-  <a th:href="@{/users/showFormForAdd}"
+  <a th:href="@{/employees/showFormForAdd}"
     class="btn btn-primary btn-sm mb-3">
     Add Employee
   </a>
 
-
-
   <table class="table table-bordered table-striped">
     <thead class="table-dark">
     <tr>
-      <th>User Id</th>
-      <th>User Name</th>
+      <th>Employee Id</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>Action</th>
     </tr>
     </thead>
 
     <tbody>
-    <tr th:each="tempEmployee : ${users}">
+    <tr th:each="tempEmployee : ${employees}">
 
       <td th:text="${tempEmployee.id}" />
-      <td th:text="${tempEmployee.userName}" />
+      <td th:text="${tempEmployee.firstName}" />
+      <td th:text="${tempEmployee.lastName}" />
+      <td th:text="${tempEmployee.email}" />
+
+      <!-- add link for an update -->
+      <!-- append employee Id with (employeeId=${tempEmployee.id})  -->
+      <td>
+        <a th:href="@{/employee/showFormForUpdate(employeeId=${tempEmployee.id})}"
+           class="btn btn-primary btn-sm mb-3">
+          Update
+        </a>
+      </td>
 
     </tr>
     </tbody>
