the delete is working, but the warning from javascript isn't popping up

--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -32,6 +32,7 @@
       <th>Last Name</th>
       <th>Email</th>
       <th>Action</th>
+      <th>Delete Employee</th>
     </tr>
     </thead>
 
@@ -49,6 +50,14 @@
         <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
            class="btn btn-primary btn-sm mb-3">
           Update
+        </a>
+      </td>
+
+      <td>
+        <a th:href="@{/employees/deleteEmployee(employeeId=${tempEmployee.id})}"
+           class="btn btn-danger btn-sm mb-3"
+           onclick="if (!(confirm('Are you sure you want to delete this employee?))) return false">
+          Delete
         </a>
       </td>
 
