--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -56,7 +56,7 @@
       <td>
         <a th:href="@{/employees/deleteEmployee(employeeId=${tempEmployee.id})}"
            class="btn btn-danger btn-sm mb-3"
-           onclick="if (!(confirm('Are you sure you want to delete this employee?))) return false">
+           onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
           Delete
         </a>
       </td>
