so far I've added a new Prescription controller, but it's not tested and probably not implemented correctly. I've also added a patient DAO and a patientDAO instead of the broader patient repository, and I've made the patient DAO using an sql query so the doctor can put in the patient first name and last name

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,8 +23,7 @@
 <div sec:authorize="hasRole('DOCTOR')">
 <!-- Add a link to point to /leaders -->
     <p>
-      <a th:href="@{/leaders}">LeaderShip Meeting</a>
-      (only for manager)
+      <a th:href="@{/prescriptions}">Prescription Management</a>
     </p>
 </div>
 
