--- a/src/main/resources/templates/prescription-management/prescription-management.html
+++ b/src/main/resources/templates/prescription-management/prescription-management.html
@@ -24,7 +24,7 @@
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
         <tr>
-            <th>Employee Id</th>
+            <th>Patient Id</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
@@ -34,12 +34,13 @@
         </thead>
 
         <tbody>
-        <tr th:each="tempEmployee : ${employees}">
+        <tr th:each="tempPatient : ${patients}">
 
-            <td th:text="${tempEmployee.id}" />
-            <td th:text="${tempEmployee.firstName}" />
-            <td th:text="${tempEmployee.lastName}" />
-            <td th:text="${tempEmployee.email}" />
+            <td th:text="${tempPatient.id}" />
+            <td th:text="${tempPatient.firstName}" />
+            <td th:text="${tempPatient.lastName}" />
+            <td th:text="${tempPatient.email}" />
+            <td th:text="${tempPatient.address}" />
 
             <!-- add link for an update -->
 
