--- a/src/main/resources/templates/patients/pres-mgmt.html
+++ b/src/main/resources/templates/patients/pres-mgmt.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -9,17 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <title>Prescription Manager</title>
-<body>
+
 <body>
 <div class="container">
 
-    <h3>Employee Directory</h3>
+    <h3>Patient Directory</h3>
     <hr>
     <!-- adding button for adding a new employee -->
-    <a th:href="@{/employees/showFormForAdd}"
-       class="btn btn-primary btn-sm mb-3">
-        Add Employee
-    </a>
 
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
@@ -28,22 +25,48 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
+            <th>Address</th>
+            <div>
             <th>Action</th>
-            <th>Delete Employee</th>
         </tr>
         </thead>
 
         <tbody>
-        <tr th:each="tempPatient : ${patients}">
+        <tr th:each="tempPatient : ${patient}">
 
-            <td th:text="${tempPatient.id}" />
+            <td th:text="${tempPatient.patientId}" />
             <td th:text="${tempPatient.firstName}" />
             <td th:text="${tempPatient.lastName}" />
             <td th:text="${tempPatient.email}" />
             <td th:text="${tempPatient.address}" />
+
+            <!-- add a link for managing prescriptions -->
+            <div sec:authorize="hasRole('DOCTOR')">
+                <td>
+                    <a th:href="@{/prescriptions/showPresForm}"
+                       class="btn btn-primary btn-sm mb-3">
+                        Manage Prescription
+                    </a>
+                </td>
+            </div>
+            <!-- add a link for updating employees -->
+            <div sec:authorize="hasRole('ADMIN')">
+                <td>
+                    <a th:hred="@{/}"
+                       class="btn btn-primary btn-sm mb-3">
+                        Update Patient details
+                    </a>
+                </td>
+            </div>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
             <!-- add link for an update -->
 
 <a th:href="@{/}">Back to home page</a>
 </body>
 </html>
+
+
