so I added the form for the prescription management but there is an issue with the id, it's getting an error.

--- a/src/main/resources/templates/employees/employee-form.html
+++ b/src/main/resources/templates/employees/employee-form.html
@@ -31,7 +31,17 @@
             <input type="text" th:field="*{email}"
                    class="form-control mb-4 w-25" placeholder="Email">
 
+            <!-- Medication Information -->
+            <select name="Medication">
+                <option value="Ibuprofen"></option>
+                <option value="Ibuprofen"></option>
+            </select>
+
+
+
             <button type="submit" class="btn btn-info col-2">Save</button>
+
+
         </form>
 
         <!-- link back to the employee list -->
