--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -2,11 +2,43 @@
 <html lang="en" xmlns:th="http://thymeleaf.org"
       xmlns:sec="http://thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <title>Prescription Management</title>
-    <h1>Prescripition Management</h1>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+          crossorigin="anonymous">
+
+    <title>Prescription Form</title>
 </head>
 <body>
+<div class="container">
+    <h3>Prescription Management</h3>
+    <hr>
+    <p class="h4 mb-4">Save</p>
+</div>
+
+<form action="#" th:action="{@/patients/save}"
+      th:object="${patient}}" method="POST">
+    <!--Adding hidden from field to handle updates-->
+    <input type="hidden" th:field="*{id}">
+
+    <input type="text" th:field="*{firstName}"
+           class="form-control mb-4 w-25" placeholder="First Name">
+    <input type="text" th:field="*{lastName}"
+           class="form-control mb-4 w-25" placeholder="Last Name">
+    <input type="text" th:field="*{email}"
+           class="form-control mb-4 w-25" placeholder="Email">
+    <input type="text" th:field="*{address}"
+           class="form-control mb-4 w-25" placeholder="Address">
+
+    <select th:field="tempMed : ${medications} th:value=${tempMed}" th:text="${tempMed}"/>
+    <button type="submit" class="btn btn-info col-2">Save</button>
+</form>
+
+
 
 </body>
 </html>
