fixed the thymeleaf actions for the controller

--- a/src/main/resources/templates/patients/pres-mgmt.html
+++ b/src/main/resources/templates/patients/pres-mgmt.html
@@ -28,6 +28,7 @@
             <th>Address</th>
             <div>
             <th>Action</th>
+            </div>
         </tr>
         </thead>
 
