--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -20,10 +20,10 @@
     <p class="h4 mb-4">Save</p>
 </div>
 
-<form action="#" th:action="{@/patients/save}"
-      th:object="${patient}}" method="POST">
+<form action="#" th:action="{@/prescriptions/showPresForm}"
+      th:object="${patient}" method="POST">
     <!--Adding hidden from field to handle updates-->
-    <input type="hidden" th:field="*{id}">
+    <input type="hidden" th:field="*{patientId}">
 
     <input type="text" th:field="*{firstName}"
            class="form-control mb-4 w-25" placeholder="First Name">
