so I got the form auto populating, but now I'm wondering if it's even the right choice to be able to edit the name and stuff. I would say, actually not. The fields should auto populate, but it shouldn't be in the form, but I'd say this is actually and easy fix, I'd have to edit the html code

--- a/src/main/resources/templates/patients/patient-list.html
+++ b/src/main/resources/templates/patients/patient-list.html
@@ -41,10 +41,11 @@
             <td th:text="${tempPatient.email}" />
             <td th:text="${tempPatient.address}" />
 
+
             <!-- add a link for managing prescriptions -->
             <div sec:authorize="hasRole('DOCTOR')">
                 <td>
-                    <a th:href="@{/prescriptions/showPresForm}"
+                    <a th:href="@{/prescriptions/showPresForm(patientId=${tempPatient.patientId})}"
                        class="btn btn-primary btn-sm mb-3">
                         Manage Prescription
                     </a>
