--- a/src/main/resources/templates/employees/employee-form.html
+++ b/src/main/resources/templates/employees/employee-form.html
@@ -30,15 +30,7 @@
 
             <input type="text" th:field="*{email}"
                    class="form-control mb-4 w-25" placeholder="Email">
-
-            <!-- Medication Information -->
-            <select name="Medication">
-                <option value="Ibuprofen"></option>
-                <option value="Ibuprofen"></option>
-            </select>
-
-
-
+            <!-- submit button -->
             <button type="submit" class="btn btn-info col-2">Save</button>
 
 
