--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -25,18 +25,30 @@
     <!--Adding hidden from field to handle updates-->
     <input type="hidden" th:field="*{patientId}">
 
-    <input type="text" th:field="*{firstName}"
-           class="form-control mb-4 w-25" placeholder="First Name">
+    <p>First Name: <span th:text="${patient.firstName}"></span></p>
+
+    <p>Last Name: <span th:text="${patient.lastName}"></span></p>
+
+    <p>Email: <span th:text="${patient.email}"></span></p>
+
+    <p>Address: <span th:text="${patient.address}"></span></p>
+
+
+
+
+    <!--
     <input type="text" th:field="*{lastName}"
            class="form-control mb-4 w-25" placeholder="Last Name">
     <input type="text" th:field="*{email}"
            class="form-control mb-4 w-25" placeholder="Email">
     <input type="text" th:field="*{address}"
            class="form-control mb-4 w-25" placeholder="Address">
-    <!--
+           -->
 
+<!--
     <select th:field="tempMed : ${medications} th:value=${tempMed}" th:text="${tempMed}"/>
     -->
+
     <button type="submit" class="btn btn-info col-2">Save</button>
 </form>
 
