the controller code amended to include the DTO, now trying to fix the html code. Haven't really changed anything as of yet, now currently still have nested form tags.

--- a/src/main/resources/templates/patients/patient-list.html
+++ b/src/main/resources/templates/patients/patient-list.html
@@ -36,10 +36,10 @@
         <tr th:each="tempPatient : ${patient}">
 
             <td th:text="${tempPatient.patientId}" />
-            <td th:text="${tempPatient.firstName}" />
-            <td th:text="${tempPatient.lastName}" />
-            <td th:text="${tempPatient.email}" />
-            <td th:text="${tempPatient.address}" />
+            <td th:text="${tempPatient.patientFirstName}"></td>
+            <td th:text="${tempPatient.patientLastName}" />
+            <td th:text="${tempPatient.patientEmail}" />
+            <td th:text="${tempPatient.patientAddress}" />
 
 
             <!-- add a link for managing prescriptions -->
