--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -20,41 +20,29 @@
     <p class="h4 mb-4">Prescription Form</p>
 </div>
 
-<form action="@{/prescriptions/showPresForm}" th:object="${prescriptionDTO}" method="POST">
+<form action="@{/prescriptions/prescribePrescription}" th:object="${prescriptionDTO}" method="POST">
 
-    <!--Adding hidden from field to handle updates -->
-        <input type="hidden" th:field="*{prescriptionDTO.patientId}">
+    <!-- Adding hidden form fields to handle updates -->
+    <input type="hidden" th:field="*{patientId}">
 
 
-    <p>First Name: <span th:text="${prescriptionDTO.firstName}"></span></p>
+    <p>Patient First Name: <span th:text="${prescriptionDTO.patientFirstName}"></span></p>
+    <p>Patient Last Name: <span th:text="${prescriptionDTO.patientLastName}"></span></p>
+    <p>Patient Address: <span th:text="${prescriptionDTO.patientAddress}"></span></p>
 
-        <p>Last Name: <span th:text="${prescriptionDTO.lastName}"></span></p>
+    <!-- Prescription fields -->
+    <input type="text" th:field="*{medicationName}" class="form-control mb-4 w-25" placeholder="Medication">
+    <input type="text" th:field="*{prescriptionDate}" class="form-control mb-4 w-25" placeholder="Date of Prescription">
+    <input type="text" th:field="*{dosage}" class="form-control mb-4 w-25" placeholder="Dose">
+    <input type="text" th:field="*{prescribingDoctor}" class="form-control mb-4 w-25" placeholder="Prescriber">
 
-        <p>Email: <span th:text="${prescriptionDTO.email}"></span></p>
+    <!-- enter a radio button for send to pharmacy or send to patient (QRCode) -->
 
-        <p>Address: <span th:text="${prescriptionDTO.address}"></span></p>
+    <!-- Submit button -->
+    <button type="submit" class="btn btn-info col-2">Submit</button>
+</form>
 
-    <!-- prescription fields -->
 
-    <form action="@{/prescriptions/prescribePrescription}" th:object="${prescriptionDTO}" method="POST">
 
-            <input type="hidden" th:field="*{prescriptionId}">
-            <input type="hidden" th:field="*{patientId}">
-
-            <input type="text" th:field="*{medicationName}"
-               class="form-control mb-4 w-25" placeholder="Medication">>
-
-            <input type="text" th:field="*{prescriptionDate}"
-               class="form-control mb-4 w-25" placeholder="Date of Prescription">
-
-            <input type="text" th:field="*{dosage}"
-                   class="form-control mb-4 w-25" placeholder="Dose">
-
-            <input type="text" th:field="*{prescribingDoctor}"
-                   class="form-control mb-4 w-25" placeholder="Prescriber">
-    <!-- submit button -->
-        <button type="submit" class="btn btn-info col-2">Save</button>
-        </form>
-    </form>
 </body>
 </html>
