--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -20,27 +20,45 @@
     <p class="h4 mb-4">Prescription Form</p>
 </div>
 
-<form action="@{/prescriptions/prescribePrescription}" th:object="${prescriptionDTO}" method="POST">
+<form action="#" th:action="@{/prescriptions/prescribePrescription}" th:object="${patient}" method="POST">
 
     <!-- Adding hidden form fields to handle updates -->
     <input type="hidden" th:field="*{patientId}">
 
 
-    <p>Patient First Name: <span th:text="${prescriptionDTO.patientFirstName}"></span></p>
-    <p>Patient Last Name: <span th:text="${prescriptionDTO.patientLastName}"></span></p>
-    <p>Patient Address: <span th:text="${prescriptionDTO.patientAddress}"></span></p>
+    <p>Patient First Name: <span th:text="*{patientFirstName}"></span></p>
+    <p>Patient Last Name: <span th:text="*{patientLastName}"></span></p>
+    <p>Patient Address: <span th:text="*{patientAddress}"></span></p>
 
-    <!-- Prescription fields -->
-    <input type="text" th:field="*{medicationName}" class="form-control mb-4 w-25" placeholder="Medication">
-    <input type="text" th:field="*{prescriptionDate}" class="form-control mb-4 w-25" placeholder="Date of Prescription">
-    <input type="text" th:field="*{dosage}" class="form-control mb-4 w-25" placeholder="Dose">
-    <input type="text" th:field="*{prescribingDoctor}" class="form-control mb-4 w-25" placeholder="Prescriber">
-
+    <div th:object="${prescription}">
+        <!-- Prescription fields -->
+        <input type="hidden" th:field="*{prescriptionId}">
+        <input type="hidden" th:field="*{patientId}">
+        <input type="text" th:field="*{medicationName}" class="form-control mb-4 w-25" placeholder="Medication">
+        <input type="text" th:field="*{prescriptionDate}" class="form-control mb-4 w-25" placeholder="Date of Prescription">
+        <input type="text" th:field="*{dosage}" class="form-control mb-4 w-25" placeholder="Dose">
+        <input type="text" th:field="*{prescribingDoctor}" class="form-control mb-4 w-25" placeholder="Prescriber">
+    </div>
     <!-- enter a radio button for send to pharmacy or send to patient (QRCode) -->
+    <input type="radio" value="Send to Pharmacy" name="sendTo" id="sendToPharmacy"> Send to Pharmacy
 
+    <div id="pharmacyDetails" style="display: none;">
+        <input type="text" name="pharmacyName" placeholder="Pharmacy Name">
+        <input type="text" name="pharmacyAddress" placeholder="Pharmacy Address">
+    </div>
     <!-- Submit button -->
     <button type="submit" class="btn btn-info col-2">Submit</button>
 </form>
+<script>
+    document.querySelector('input[name="sendTo"]').addEventListener('change', function() {
+        var pharmacyDetailsDiv = document.getElementById('pharmacyDetails');
+        if (this.value === 'Send to Pharmacy') {
+            pharmacyDetailsDiv.style.display = 'block';
+        } else {
+            pharmacyDetailsDiv.style.display = 'none';
+        }
+    });
+</script>
 
 
 
