--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -41,18 +41,13 @@
     </div>
     <!-- enter a radio button for send to pharmacy or send to patient (QRCode) -->
     <input type="radio" value="Send to Pharmacy" name="sendTo" id="sendToPharmacy"> Send to Pharmacy
-
+    <input type="radio" value="Send QR" name="sendToQr" id="sendToQr"> Send to Patient
 
     <div th:object="${pharmacies}">
     <div id="pharmacyDetails" style="display: none;">
         <select class="form-control" id="pharmaciesDropdown">
             <option th:each="tempPharmacy : ${pharmacies}" th:value="${tempPharmacy.pharmacyName}" th:text="${tempPharmacy.pharmacyName}"></option>
         </select>
-        <!--
-        <select class="form-control" th:field="*{pharmacyName}">
-            <option th:each="tempPharmacy : ${pharmacies}" th:value="${tempPharmacy.pharmacyName}" th:text="${tempPharmacy.pharmacyName}"></option>
-        </select>
-        -->
     </div>
     </div>
 
@@ -60,33 +55,33 @@
     <button type="submit" class="btn btn-info col-2">Submit</button>
 </form>
 <script>
-    // Select the radio input and the pharmacy details div
+    // Select the radio inputs and the pharmacy details div
     var sendToPharmacyRadio = document.getElementById('sendToPharmacy');
+    var sendToQrRadio = document.getElementById('sendToQr');
     var pharmacyDetailsDiv = document.getElementById('pharmacyDetails');
 
-    // Initial visibility state based on the checked status of the radio input
+    // Initial visibility state based on the checked status of the radio inputs
     if (sendToPharmacyRadio.checked) {
         pharmacyDetailsDiv.style.display = 'block';
     } else {
         pharmacyDetailsDiv.style.display = 'none';
     }
 
-    // Add an event listener to the radio input
+    // Add an event listener to the radio inputs
     sendToPharmacyRadio.addEventListener('change', function() {
         if (this.checked) {
             pharmacyDetailsDiv.style.display = 'block';
-        } else {
+            sendToQrRadio.checked = false; // Uncheck the other radio button
+        }
+    });
+
+    sendToQrRadio.addEventListener('change', function() {
+        if (this.checked) {
             pharmacyDetailsDiv.style.display = 'none';
+            sendToPharmacyRadio.checked = false; // Uncheck the other radio button
         }
     });
 </script>
-
-
-
-
-
-
-
 
 
 
