--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -38,6 +38,9 @@
         <input type="text" th:field="*{prescriptionDate}" class="form-control mb-4 w-25" placeholder="Date of Prescription">
         <input type="text" th:field="*{dosage}" class="form-control mb-4 w-25" placeholder="Dose">
         <input type="text" th:field="*{prescribingDoctor}" class="form-control mb-4 w-25" placeholder="Prescriber">
+
+        <!-- Hidden field to store selected pharmacy -->
+        <input type="hidden" th:field="*{pharmacy_recipient_id}" id="recipientId">
     </div>
     <!-- enter a radio button for send to pharmacy or send to patient (QRCode) -->
     <input type="radio" value="Send to Pharmacy" name="sendTo" id="sendToPharmacy"> Send to Pharmacy
@@ -45,7 +48,7 @@
 
     <div th:object="${pharmacies}">
     <div id="pharmacyDetails" style="display: none;">
-        <select class="form-control" id="pharmaciesDropdown">
+        <select class="form-control" id="pharmaciesDropdown" onchange="updateRecipientId()">
             <option th:each="tempPharmacy : ${pharmacies}" th:value="${tempPharmacy.pharmacyName}" th:text="${tempPharmacy.pharmacyName}"></option>
         </select>
     </div>
@@ -81,6 +84,12 @@
             sendToPharmacyRadio.checked = false; // Uncheck the other radio button
         }
     });
+
+    function updateRecipientId() {
+            var selectedPharmacy = document.getElementById('pharmaciesDropdown');
+            var recipientIdField = document.getElementById('recipientId');
+            recipientIdField.value = selectedPharmacy.value;
+        }
 </script>
 
 
