--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -40,7 +40,7 @@
         <input type="text" th:field="*{prescribingDoctor}" class="form-control mb-4 w-25" placeholder="Prescriber">
 
         <!-- Hidden field to store selected pharmacy -->
-        <input type="hidden" th:field="*{pharmacy_recipient_id}" id="recipientId">
+        <input type="hidden" th:field="*{pharmacyRecipientId}" id="recipientId">
     </div>
     <!-- enter a radio button for send to pharmacy or send to patient (QRCode) -->
     <input type="radio" value="Send to Pharmacy" name="sendTo" id="sendToPharmacy"> Send to Pharmacy
