--- a/src/main/resources/templates/prescriptions/prescription-form.html
+++ b/src/main/resources/templates/prescriptions/prescription-form.html
@@ -41,27 +41,24 @@
         <input type="text" th:field="*{prescribingDoctor}" class="form-control mb-4 w-25" placeholder="Prescriber">
 
         <!-- Hidden field to store selected pharmacy -->
-        <input type="hidden" th:field="*{pharmacyRecipientId}" id="recipientId">
-        <input type="hidden" id="hiddenRecipientId" name="pharmacyRecipientId" th:field="*{pharmacyRecipientId}">
+        <input type="hidden" th:field="*{pharmacy}" id="pharmacy">
     </div>
-    <!-- enter a radio button for send to pharmacy or send to patient (QRCode) -->
-    <input type="radio" value="Send to Pharmacy" name="sendTo" id="sendToPharmacy"> Send to Pharmacy
-    <input type="radio" value="Send QR" name="sendToQr" id="sendToQr"> Send to Patient
 
+        <input type="radio" value="Send to Pharmacy" name="sendTo" id="sendToPharmacy"> Send to Pharmacy
+        <input type="radio" value="Send QR" name="sendToQr" id="sendToQr"> Send to Patient
 
-    <div th:object="${pharmacies}">
-    <div id="pharmacyDetails" style="display: none;">
-
-        <select class="form-control" id="pharmaciesDropdown" name="pharmacyRecipientId"onchange="updateRecipientId()">
-            <option th:each="tempPharmacy : ${pharmacies}" th:value="${tempPharmacy[1]}" th:text="${tempPharmacy[0] + ' - ' + tempPharmacy[1]}" th:data-recipient-id="${tempPharmacy[1]}"></option>
-        </select>
-
-    </div>
-    </div>
+        <div th:object="${pharmacies}">
+            <div id="pharmacyDetails" style="display: none;">
+                <select class="form-control" id="pharmaciesDropdown" name="pharmacyRecipientId">
+                    <option th:each="pharmacy : ${pharmacies}" th:value="${pharmacy.pharmacyId}" th:data-recipient-id="${pharmacy.pharmacyId}" th:text="${pharmacy.pharmacyName}"></option>
+                </select>
+            </div>
+        </div>
 
     <!-- Submit button -->
     <button type="submit" class="btn btn-info col-2">Submit</button>
 </form>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
     // Select the radio inputs and the pharmacy details div
     var sendToPharmacyRadio = document.getElementById('sendToPharmacy');
@@ -89,11 +86,37 @@
             sendToPharmacyRadio.checked = false; // Uncheck the other radio button
         }
     });
-function updateRecipientId() {
-    var selectedOption = document.getElementById('pharmaciesDropdown').options[document.getElementById('pharmaciesDropdown').selectedIndex];
-    var selectedRecipientId = selectedOption.dataset.recipientId;
-    document.getElementById('recipientId').value = selectedRecipientId;
-}
+
+    // function to populate hidden field in prescription
+
+   $(document).ready(function () {
+        // Handle dropdown change event
+        $('#pharmaciesDropdown').change(function () {
+            var selectedPharmacy = $(this).val();
+            $('#pharmacy').val(selectedPharmacy);
+        });
+
+        // Trigger change event on page load
+        $('#pharmaciesDropdown').trigger('change');
+    });
+
+    // Function to submit the form using AJAX
+    function submitForm() {
+        $.ajax({
+            type: 'POST',
+            url: $('#prescriptionForm').attr('action'),
+            data: $('#prescriptionForm').serialize(), // Serialize the form data
+            success: function (response) {
+                // Handle success response
+                console.log(response);
+            },
+            error: function (error) {
+                // Handle error
+                console.log(error);
+            }
+        });
+    }
+</script>
 
 
 </script>
